--- a/assets/typography.css
+++ b/assets/typography.css
@@ -1,6 +1,9 @@
 body {
     font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    max-width: 100% !important;
 }
+
+
 
 
 .bg-custom-2 {
